[gd_scene load_steps=2 format=2]

[ext_resource path="res://Field/DamageField.gd" type="Script" id=1]

[node name="DamageField" type="GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
columns = 3
script = ExtResource( 1 )

[node name="Light" type="Label" parent="."]
margin_right = 58.0
margin_bottom = 14.0
text = "Light"
align = 1

[node name="Moderate" type="Label" parent="."]
margin_left = 62.0
margin_right = 123.0
margin_bottom = 14.0
text = "Moderate"
align = 1

[node name="Severe" type="Label" parent="."]
margin_left = 127.0
margin_right = 185.0
margin_bottom = 14.0
text = "Severe"
align = 1

[node name="LightEdit" type="LineEdit" parent="."]
margin_top = 18.0
margin_right = 58.0
margin_bottom = 42.0
max_length = 2

[node name="ModerateEdit" type="LineEdit" parent="."]
margin_left = 62.0
margin_top = 18.0
margin_right = 123.0
margin_bottom = 42.0
max_length = 2

[node name="SevereEdit" type="LineEdit" parent="."]
margin_left = 127.0
margin_top = 18.0
margin_right = 185.0
margin_bottom = 42.0
max_length = 2
